[package]
name = "bpb"
description = "boats's personal barricade"
license = "MIT OR Apache-2.0"
version = "1.1.0"
repository = "https://github.com/withoutboats/bpb"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]

[dependencies]
toml = "0.5"
rand = "0.6"
sha2 = "0.8"
serde = { version = "1.0.70", features = ["derive"] }
hex = "0.3"
failure = "0.1"

[dependencies.pbp]
git = "https://github.com/badboy/pbp"
branch = "edition-2018"
features = ["dalek"]

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
